--- a/CAPSTONE_TEAM01_2024/Views/Users/Index.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Users/Index.cshtml
@@ -12,6 +12,15 @@
 <div class="container-fluid d-flex flex-column justify-content-center align-items-center"
      id="Login_Content"
      style="background-color: rgba(0,0,0,0.7); height: 100vh;">
+    <div>
+        <div class="text-center">
+            <h1 class="fs-5 text-light p-0 m-0">TRƯỜNG ĐẠI HỌC</h1>
+            <h2 class="fs-1 text-light fw-bold p-0 m-0" style="letter-spacing: 6px">VĂN LANG</h2>
+        </div>
+    </div>
+    <div>
+        <h3 class="fs-1 text-light fw-bold p-3 m-3">HỆ THỐNG QUẢN LÝ CÔNG TÁC CỐ VẤN HỌC TẬP</h3>
+    </div>
     <div style="width: 500px; height: 450px; border: 1px solid #ccc; border-radius: 10px; overflow: hidden; position: relative; background-color: white;">
         <!-- Red Header -->
         <div style="height: 30%; width: 100%; background-color: #dc3545; position: relative; z-index: 1;"></div>
@@ -35,6 +44,9 @@
                 <h8>- Zalo: 039 460 9751 (Kyle Nguyễn)</h8><br>
             </div>
         </div>
+    </div>
+    <div>
+        <h3 class="fs-5 text-light fw-bold p-4 m-4">&copy; 2024 - Bản quyền thuộc khoa Công Nghệ Thông Tin, trường đại học Văn Lang</h3>
     </div>
 </div>
 
