Create view statistics

--- a/CAPSTONE_TEAM01_2024/Views/Shared/_PersonnelLayout.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Shared/_PersonnelLayout.cshtml
@@ -172,37 +172,67 @@
                             </ul>
                         </li>
                      
-                            <li class="nav-item">
-                                <a class="nav-link" role="button" aria-expanded="false" aria-controls="dropdownMenu5" id="toggleMenu5"
-                                   onmouseover="this.style.backgroundColor='#c82333'; this.style.color='#fff';"
-                                   onmouseout="this.style.backgroundColor='transparent'; this.style.color='#fff';">
-                                    <i class="bi bi-chat-dots"></i> TRAO ĐỔI <i class="bi bi-caret-down-fill" style="float:right;"></i>
-                                </a>
-                                <ul class="collapse" id="dropdownMenu5" style="list-style-type: none; padding-left: 35px;">
-                                    <li>
-                                        <a class="dropdown-item" href="/Categories/ReceiveEmail" id="linkReceive" style="text-decoration:none; color: #fff; font-size:1.2rem; font-weight:bold;"
-                                           onmouseover="this.style.backgroundColor='#c82333'; this.style.color='#fff';"
-                                           onmouseout="this.style.backgroundColor='transparent'; this.style.color='#fff';">
-                                            <i class="bi bi-envelope-open"></i> Nhận
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a class="dropdown-item" href="/Categories/SentEmail" id="linkSend" style="text-decoration:none; color: #fff; font-size:1.2rem; font-weight:bold;"
-                                           onmouseover="this.style.backgroundColor='#c82333'; this.style.color='#fff';"
-                                           onmouseout="this.style.backgroundColor='transparent'; this.style.color='#fff';">
-                                            <i class="bi bi-send"></i> Gửi
-                                        </a>
-                                    </li>
-                                </ul>
-                            </li>
-                        
                         <li class="nav-item">
-                            <a class="nav-link" href="/Statistics/ShowStatistics" id="linkStatistics" style="text-decoration:none;"
+                            <a class="nav-link" role="button" aria-expanded="false" aria-controls="dropdownMenu5" id="toggleMenu5"
                                onmouseover="this.style.backgroundColor='#c82333'; this.style.color='#fff';"
                                onmouseout="this.style.backgroundColor='transparent'; this.style.color='#fff';">
-                                <i class="bi bi-graph-up"></i> THỐNG KÊ
+                                <i class="bi bi-chat-dots"></i> TRAO ĐỔI <i class="bi bi-caret-down-fill" style="float:right;"></i>
                             </a>
+                            <ul class="collapse" id="dropdownMenu5" style="list-style-type: none; padding-left: 35px;">
+                                <li>
+                                    <a class="dropdown-item" href="/Categories/ReceiveEmail" id="linkReceive" style="text-decoration:none; color: #fff; font-size:1.2rem; font-weight:bold;"
+                                       onmouseover="this.style.backgroundColor='#c82333'; this.style.color='#fff';"
+                                       onmouseout="this.style.backgroundColor='transparent'; this.style.color='#fff';">
+                                        <i class="bi bi-envelope-open"></i> Nhận
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="/Categories/SentEmail" id="linkSend" style="text-decoration:none; color: #fff; font-size:1.2rem; font-weight:bold;"
+                                       onmouseover="this.style.backgroundColor='#c82333'; this.style.color='#fff';"
+                                       onmouseout="this.style.backgroundColor='transparent'; this.style.color='#fff';">
+                                        <i class="bi bi-send"></i> Gửi
+                                    </a>
+                                </li>
+                            </ul>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" role="button" aria-expanded="false" aria-controls="dropdownMenu6" id="toggleMenu6"
+                               onmouseover="this.style.backgroundColor='#c82333'; this.style.color='#fff';"
+                               onmouseout="this.style.backgroundColor='transparent'; this.style.color='#fff';">
+                                <i class="bi bi-graph-up"></i> THỐNG KÊ <i class="bi bi-caret-down-fill" style="float:right;"></i>
+                            </a>
+                            <ul class="collapse" id="dropdownMenu6" style="list-style-type: none; padding-left: 35px;">
+                                <li>
+                                    <a class="dropdown-item" href="/Statistics/ShowStatistics" id="linkStatistics" style="text-decoration:none; color: #fff; font-size:1.2rem; font-weight:bold;"
+                                       onmouseover="this.style.backgroundColor='#c82333'; this.style.color='#fff';"
+                                       onmouseout="this.style.backgroundColor='transparent'; this.style.color='#fff';">
+                                        <i class="bi bi-speedometer2"></i> DashBoard
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="/Statistics/StatisticsRole" id="linkStatisticsRole" style="text-decoration:none; color: #fff; font-size:1.2rem; font-weight:bold;"
+                                       onmouseover="this.style.backgroundColor='#c82333'; this.style.color='#fff';"
+                                       onmouseout="this.style.backgroundColor='transparent'; this.style.color='#fff';">
+                                        <i class="bi bi-person-badge-fill"></i> Vai Trò
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="/Statistics/StatisticsMajor" id="linkStatisticsMajor" style="text-decoration:none; color: #fff; font-size:1.2rem; font-weight:bold;"
+                                       onmouseover="this.style.backgroundColor='#c82333'; this.style.color='#fff';"
+                                       onmouseout="this.style.backgroundColor='transparent'; this.style.color='#fff';">
+                                        <i class="bi bi-diagram-2-fill"></i> Ngành Lớp Học 
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="/Statistics/StatisticsStatusStudent" id="linkStatisticsStatusStudent" style="text-decoration:none; color: #fff; font-size:1.2rem; font-weight:bold;"
+                                       onmouseover="this.style.backgroundColor='#c82333'; this.style.color='#fff';"
+                                       onmouseout="this.style.backgroundColor='transparent'; this.style.color='#fff';">
+                                        <i class="bi bi-book-half"></i> Trạng Thái SV
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                        
                         
                     </ul>
                 </div>
@@ -246,6 +276,9 @@
                 '/ProfileManager/StudentProfiles': 'linkStudentProfiles',
                 '/ProfileManager/AdvisorProfiles': 'linkAdvisorProfiles',
                 '/Statistics/ShowStatistics': 'linkStatistics',
+                '/Statistics/StatisticsRole': 'linkStatisticsRole',
+                '/Statistics/StatisticsMajor': 'linkStatisticsMajor',
+                '/Statistics/StatisticsStatusStudent': 'linkStatisticsStatusStudent',
                 '/Categories/SchoolYear': 'linkSchoolYear',
                 '/Categories/ClassList': 'linkClassList',
                 '/Categories/SemesterPlan': 'linkSemesterPlan',
@@ -261,7 +294,7 @@
             }
 
             // Load dropdown state from session storage
-            const dropdownMenus = ['dropdownMenu1', 'dropdownMenu2', 'dropdownMenu3', 'dropdownMenu4', 'dropdownMenu5'];
+            const dropdownMenus = ['dropdownMenu1', 'dropdownMenu2', 'dropdownMenu3', 'dropdownMenu4', 'dropdownMenu5', 'dropdownMenu6'];
             dropdownMenus.forEach(menuId => {
                 const menuState = sessionStorage.getItem(menuId);
                 const menu = document.getElementById(menuId);
